tests/invalid/string.brandejs
;unfinished string literal
ahoj = "kok